<resources>
    <string name="app_name">Events App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="admin_email">admin@eventsapp.com</string>
    <string name="wrong_login">Pogresan username ili password</string>
    <string name="login_succes">Uspesan login</string>
    <string name="register_failed">Neuspesan register</string>
    <string name="wrong_old_password">Stara sifra nije ispravna.</string>
    <string name="password_change_failed">Promena sifre nije uspela.</string>
    <string name="fill_all_fields">Popunite sva polja</string>
    <string name="events">Events</string>
    <string name="my_events">My Events</string>
    <string name="friends">Friends</string>
    <string name="no_events">No upcoming events</string>
    <string name="my_events_placeholder">My Events screen</string>
    <string name="welcome_user">Welcome</string>
    <string name="user">username</string>
    <string name="interested_events">Interested Events</string>
    <string name="attending_events">Attending Events</string>
    <string name="my_profile">My Profile</string>
    <string name="end_session">End Session</string>
    <string name="profile_username">Username: %1$s</string>
    <string name="profile_email">Email: %1$s</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="password_changed">Uspesna promena lozinke</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featured">FEATURED</string>
    <string name="free_places">Slobodnih mesta: %1$d/%2$d</string>
    <string name="add_event">DODAJ EVENT</string>
    <string name="category_all">Sve</string>
    <string name="category_party">Party</string>
    <string name="category_festival">Festival</string>
    <string name="category_theater">Stand-Up &amp; Theater</string>
    <string name="category_concert">Concert</string>
    <string name="category_exhibition">Exhibition</string>

    <string name="category_label">Kategorija: %1$s</string>
    <string name="location_label">Lokacija: %1$s</string>
    <string name="datetime_label">Datum i vreme: %1$s</string>
    <string name="average_rating">Prosečna ocena: %1$.1f (%2$d ocena)</string>
    <string name="no_ratings">Još uvek nema ocena</string>
    <string name="interested_button">INTERESTED</string>
    <string name="attending_button">ATTENDING</string>
    <string name="added_to_interested">Dodat u zainteresovane.</string>
    <string name="signed_up_attending">Prijavili ste se na događaj.</string>
    <string name="no_interested_events">Nemate zainteresovanih događaja</string>
    <string name="no_attending_events">Nemate prijavljenih događaja</string>
    <string name="upcoming_events">Predstojeći događaji</string>
    <string name="past_events">Prošli događaji</string>
    <string name="rate">OCENI</string>
    <string name="confirm_rating">POTVRDI OCENU</string>
    <string name="choose_rating_first">Odaberite ocenu pre potvrde.</string>
    <string name="rating_saved">Ocena je sačuvana.</string>
    <string name="rate_event_title">Oceni događaj</string>
    <string name="hint_event_name">Naziv događaja</string>
    <string name="hint_event_description">Opis</string>
    <string name="hint_event_location">Lokacija</string>
    <string name="hint_event_datetime">dd.MM.yyyy HH:mm</string>
    <string name="promoted_event">Promoted event</string>
    <string name="hint_capacity">Kapacitet</string>
    <string name="create_event">KREIRAJ EVENT</string>
    <string name="fill_required_fields">Popunite sva obavezna polja.</string>
    <string name="invalid_capacity">Unesite ispravan kapacitet.</string>
    <string name="event_created_successfully">Događaj uspešno kreiran.</string>
    <string name="event_create_failed">Kreiranje događaja nije uspelo.</string>
    <string name="interested_failed">Dodavanje u zainteresovane nije uspelo.</string>
    <string name="already_has_attendance">Već postoji zapis za ovaj događaj.</string>
    <string name="already_attending">Već ste prijavljeni na ovaj događaj.</string>
    <string name="no_free_places">Nema slobodnih mesta.</string>
    <string name="attending_failed">Prijava na događaj nije uspela.</string>
    <string name="already_rated">Već ste ocenili ovaj događaj.</string>
    <string name="rating_failed">Čuvanje ocene nije uspelo.</string>
    <string name="is_admin">Admin korisnik</string>
    <string name="register_success">Uspešna registracija.</string>
    <string name="friends_activity_title">Friends Activity</string>
    <string name="server_down">Server error</string>
    <string name="exclusive_channel_name">Exclusive Events</string>
    <string name="exclusive_channel_description">Notifications for exclusive events</string>
    <string name="exclusive_notification_title">New exclusive event</string>
    <string name="exclusive_notification_text"> je dostupan. Vreme za prijavu: </string>
    <string name="exclusive_event_category">Exclusive</string>
    <string name="exclusive_window_closed">Registration window is closed.</string>
    <string name="exclusive_window_closed_title">Exclusive event closed</string>
    <string name="exclusive_window_closed_text">Vreme za prijavu je isteklo. Sansa za novu prijavu za pola sata </string>

</resources>