<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEventLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_location"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEventDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_datetime"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkPromoted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promoted_event" />

    <EditText
        android:id="@+id/etCapacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_capacity"
        android:inputType="number"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event" />

</LinearLayout>