<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/emptyAttendingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_attending_events"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvUpcomingHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_events"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listUpcomingEvents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvPastHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_events"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listPastEvents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>